# gallery

./: .gitignore  .python-version  README-GCP.md  README.md  TODO.md  config.sample.json  gallery.sh  global_config.sample.json  index.html  index.tsx  package.json  tsconfig.json
cli/: PictureSize.py  __main__.py  args.py  const.py  creds.py  exceptions.py  global_config.py  log.py  pyproject.toml  website.py
cli/artworks/: ArtworkProperty.py  PictureResizer.py  __init__.py  artwork.py  read.py  transtype.py
cli/bucket/: __init__.py  bucket.py
cli/command/: site_id.py  subprocessRun.py
cli/command/assets/: ResizedArtworksBucket.py  __init__.py  run.py
cli/command/backup/: ArtworkSourcesBackupBucket.py  __init__.py  run.py
cli/command/build_server/: __init__.py  config.py  docker.py  image.py  run.py
cli/command/deploy/: __init__.py  run.py
cli/command/deploy_server/: __init__.py  create_vm.py  delete_vm.py  restart_vm.py  run.py  vm_exists.py
cli/command/ingest/: __init__.py  output.py  run.py  sheet.py
cli/command/resize/: __init__.py  artworkImage.py  output.py  run.py
cli/command/sync_bucket/: __init__.py  run.py
cli/command/terraform_config/: __init__.py  run.py
cli/tools/: __init__.py  docker.py  file.py
doc/: spreadsheet.md
doc/configuration/: global.md  per-site.md
doc/setup/: GCP.md  dev.md
front/: biome.json  index.html  package.json  tsconfig.json  vite.config.ts
server/: README.md  main.py  requirements.txt
sites/: .gitignore  README.md  config.ts
sites.inactives/: README.md
terraform/: .gitignore  main.tf
(+124 files in other folders)
